--- a/package.xml
+++ b/package.xml
@@ -2,10 +2,10 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>land_plugins</name>
-  <version>0.0.0</version>
+  <version>0.1.0</version>
   <description>AS2 land behaviours plugins</description>
-  <maintainer email="pedroariasperez96@gmail.com">parias</maintainer>
-  <license>TODO: License declaration</license>
+  <maintainer email="cvar.upm3@gmail.com">Computer Vision And Aerial Robotics Group (UPM)</maintainer>
+  <license>BSD-3-Clause</license>
 
   <buildtool_depend>ament_cmake_ros</buildtool_depend>
 
