--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ if(NOT CMAKE_CXX_STANDARD)
 endif()
 
 # set Release as default
-if (NOT CMAKE_BUILD_TYPE)
+if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE Release)
 endif()
 
@@ -31,19 +31,43 @@ foreach(DEPENDENCY ${PROJECT_DEPENDENCIES})
   find_package(${DEPENDENCY} REQUIRED)
 endforeach()
 
-add_library(land_plugins src/land_plugin_speed.cpp src/land_plugin_platform.cpp)
-target_include_directories(land_plugins PUBLIC
+set(HEADER_HPP_FILES
+  include/${PROJECT_NAME}/${PROJECT_NAME}.hpp
+)
+
+include_directories(
+  include
+  include/${PROJECT_NAME}
+)
+
+set(SOURCE_CPP_FILES
+  src/land_plugin_platform.cpp
+  src/land_plugin_speed.cpp
+)
+
+add_library(${PROJECT_NAME} ${SOURCE_CPP_FILES})
+
+target_include_directories(${PROJECT_NAME} PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<INSTALL_INTERFACE:include>)
+
 ament_target_dependencies(
-  land_plugins
+  ${PROJECT_NAME}
   ${PROJECT_DEPENDENCIES}
 )
 
 pluginlib_export_plugin_description_file(land_plugin_base plugins.xml)
 
+if(BUILD_TESTING)
+  find_package(ament_cmake_cppcheck REQUIRED)
+  find_package(ament_cmake_clang_format REQUIRED)
+
+  ament_cppcheck(src/ include/ tests/)
+  ament_clang_format(src/ include/ tests/ --config ${CMAKE_CURRENT_SOURCE_DIR}/.clang-format)
+endif()
+
 install(
-  TARGETS land_plugins
+  TARGETS ${PROJECT_NAME}
   EXPORT export_${PROJECT_NAME}
   ARCHIVE DESTINATION lib
   LIBRARY DESTINATION lib
@@ -51,7 +75,7 @@ install(
 )
 
 ament_export_libraries(
-  land_plugins
+  ${PROJECT_NAME}
 )
 ament_export_targets(
   export_${PROJECT_NAME}
