--- a/package.xml
+++ b/package.xml
@@ -19,8 +19,11 @@
   <depend>motion_reference_handlers</depend>
   <depend>std_srvs</depend>
 
+  <!-- linting test dependencies -->
   <test_depend>ament_lint_auto</test_depend>
-  <test_depend>ament_lint_common</test_depend>
+  <test_depend>ament_cmake_clang_format</test_depend>
+  <test_depend>ament_cmake_cppcheck</test_depend>
+  <test_depend>ament_cmake_cpplint</test_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
