--- a/package.xml
+++ b/package.xml
@@ -15,6 +15,7 @@
   <depend>rclcpp</depend>
   <depend>nav_msgs</depend>
   <depend>as2_core</depend>
+  <depend>as2_behavior</depend>
   <depend>as2_msgs</depend>
   <depend>motion_reference_handlers</depend>
   <depend>std_srvs</depend>
